第五次提交： 增加log_utils模块 实现打印日志功能

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -6,6 +6,11 @@ URL = http://www.baidu.com
 # 测试数据存放路径
 CASE_DATA_PATH = test_data/test_case_data.xlsx
 
+# 日志存放路径
+LOG_PATH = logs
+
 [log]
+# 日志级别配置  NOTSET(0)、DEBUG(10)、INFO(20)、WARNING(30)、ERROR(40)、CRITICAL(50)
+LOG_LEVEL = 10
 
 [email]
